OPHYK-1261 fix käyttöoikeus description overflow in modal

--- a/henkilo-ui/src/main/static/src/components/common/select/KayttooikeusryhmaSelect.module.css
+++ b/henkilo-ui/src/main/static/src/components/common/select/KayttooikeusryhmaSelect.module.css
@@ -42,4 +42,5 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    word-break: break-word;
 }
